--- a/pyproject.toml
+++ b/pyproject.toml
@@ -46,6 +46,7 @@ sqlmodel-basecrud = "^0.1.9"
 feedgen = "^0.9.0"
 yt-dlp = "^2022.11.11"
 fastapi-utils = "^0.2.1"
+httpx = "^0.23.1"
 
 
 [tool.poetry.group.dev.dependencies]
