--- a/youtube_rss/data/.env.example
+++ b/youtube_rss/data/.env.example
@@ -3,6 +3,7 @@ SERVER_IP = "0.0.0.0"
 SERVER_PORT = 5000
 BASE_DOMAIN = "*******************:5000"
 BASE_URL = "http://*******************:5000"
+PROXY_HOST = "localhost"
 
 # DATABASE
 DATABASE_ECHO = False
