migrate to new structure, major refactoring

--- a/youtube_rss/data/.env.example
+++ b/youtube_rss/data/.env.example
@@ -8,9 +8,9 @@ PROXY_HOST = "localhost"
 # DATABASE
 DATABASE_ECHO = False
 
-# CACHE
-USE_CACHE = True
-BUILD_FEED_CACHE_INTERVAL_MINUTES = 10
+# REFRESH
+REFRESH_SOURCES_INTERVAL_MINUTES = 15
+REFRESH_VIDEOS_INTERVAL_MINUTES = 30
 
 # BUILD FEED
 BUILD_FEED_RECENT_VIDEOS = 10
