--- a/pyproject.toml
+++ b/pyproject.toml
@@ -47,6 +47,7 @@ feedgen = "^0.9.0"
 yt-dlp = "^2022.11.11"
 fastapi-utils = "^0.2.1"
 httpx = "^0.23.1"
+shortuuid = "^1.0.11"
 
 
 [tool.poetry.group.dev.dependencies]
