Addedd UVICORN_ENTRYPOINT, UVICORN_RELOAD to config

--- a/youtube_rss/data/.env.example
+++ b/youtube_rss/data/.env.example
@@ -1,14 +1,17 @@
-LOG_LEVEL = "DEBUG"
-
 # SERVER
 SERVER_IP = "0.0.0.0"
 SERVER_PORT = 5000
 BASE_DOMAIN = "*******************:5000"
 BASE_URL = "http://*******************:5000"
 PROXY_HOST = "localhost"
+UVICORN_RELOAD = True
+UVICORN_ENTRYPOINT = "xxxxxxxxxx.core.app:app"
 
 # DATABASE
 DATABASE_ECHO = False
+
+# LOG
+LOG_LEVEL = "DEBUG"
 
 # REFRESH
 REFRESH_SOURCES_INTERVAL_MINUTES = 15
