--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,6 +33,7 @@ classifiers = [  #! Update me
 
 [tool.poetry.dependencies]
 python = "^3.10"
+
 loguru = "^0.6.0"
 
 typer = {extras = ["all"], version = "^0.6.1"}
@@ -42,12 +43,13 @@ fastapi = "^0.88.0"
 uvicorn = "^0.20.0"
 pyyaml = "^6.0"
 python-dotenv = "^0.21.0"
-sqlmodel-basecrud = "^0.1.9"
 feedgen = "^0.9.0"
 yt-dlp = "^2022.11.11"
 fastapi-utils = "^0.2.1"
 httpx = "^0.23.1"
 shortuuid = "^1.0.11"
+sqlmodel = "^0.0.8"
+wheel = "^0.38.1"
 
 
 [tool.poetry.group.dev.dependencies]
@@ -131,7 +133,7 @@ warn_redundant_casts = true
 warn_return_any = true
 warn_unreachable = true
 warn_unused_configs = true
-warn_unused_ignores = true
+warn_unused_ignores = false
 exclude = "typings"
 
 [[tool.mypy.overrides]]
