--- a/youtube_rss/data/.env.example
+++ b/youtube_rss/data/.env.example
@@ -1,3 +1,5 @@
+ENV_NAME = "dev"
+
 # SERVER
 SERVER_IP = "0.0.0.0"
 SERVER_PORT = 5000
@@ -12,6 +14,10 @@ DATABASE_ECHO = False
 
 # LOG
 LOG_LEVEL = "DEBUG"
+
+# NOTIFY
+TELEGRAM_API_TOKEN = "xxxxxxxxxxxxxxxxxxxxxx"
+TELEGRAM_CHAT_ID = "xxxxxxx"
 
 # REFRESH
 REFRESH_SOURCES_INTERVAL_MINUTES = 15
