--- a/pyproject.toml
+++ b/pyproject.toml
@@ -43,7 +43,6 @@ fastapi = "^0.88.0"
 uvicorn = "^0.20.0"
 pyyaml = "^6.0"
 python-dotenv = "^0.21.0"
-feedgen = "^0.9.0"
 yt-dlp = "^2022.11.11"
 fastapi-utils = "^0.2.1"
 httpx = "^0.23.1"
@@ -51,6 +50,12 @@ shortuuid = "^1.0.11"
 sqlmodel = "^0.0.8"
 wheel = "^0.38.1"
 python-telegram-bot = "^20.0"
+pyjwt = "^2.6.0"
+passlib = {extras = ["bcrypt"], version = "^1.7.4"}
+feedgen = "^0.9.0"
+jinja2 = "^3.1.2"
+python-multipart = "^0.0.5"
+alembic = "^1.9.1"
 
 
 [tool.poetry.group.dev.dependencies]
