--- a/pyproject.toml
+++ b/pyproject.toml
@@ -56,6 +56,7 @@ feedgen = "^0.9.0"
 jinja2 = "^3.1.2"
 python-multipart = "^0.0.5"
 alembic = "^1.9.1"
+asyncpg = "^0.27.0"
 
 
 [tool.poetry.group.dev.dependencies]
@@ -77,6 +78,7 @@ coverage = "^6.1.2"
 coverage-badge = "^1.1.0"
 pytest-html = "^3.1.1"
 pytest-cov = "^4.0.0"
+trio = "^0.22.0"
 
 [tool.black]
 # https://github.com/psf/black
